# nmr-to-structure

./: .travis.yml  LICENSE  README.md  pryproject.toml  setup.cfg  setup.py
example/: smiles.csv
example/simulation_out/1H/: log.txt
nmr_to_structure/nmr_generation/: gather_data.py  orchestrate_mn.py  run_mestrenova_simulation.py
nmr_to_structure/nmr_generation/mestre_nova_scripts/: 1H_predictor.qs
nmr_to_structure/prepare_input/: create_nmr_rxn_set.py  create_nmr_set.py  nmr_utils.py  prepare_nmr+rxn_input.py  prepare_nmr_input.py
nmr_to_structure/training/: score.py  transformer_template.yaml
src/nmr_to_structure/nmr_generation/: run_mestrenova_simulation.py
src/nmr_to_structure/nmr_generation/mestre_nova_scripts/: 13C_predictor.qs
src/nmr_to_structure/prepare_input/: nmr_utils.py  prepare_nmr_input.py  prepare_nmr_rxn_input.py
src/nmr_to_structure/training/: run_training.py  transformer_template_tiny_cpu.yaml
