[options]
install_requires =
    click==8.0.4
    pandas==1.4.2
    numpy==1.23.0
    scipy==1.7.3
    scikit-learn==1.1.3
    regex==2022.3.15
    tqdm== 4.64.0
    rdkit==2022.9.1
    tqdm==4.65.0
    opennmt-py==3.0.3
    PyAutoGUI==0.9.53
    rxn-chem-utils==1.1.4

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503, W605

[mypy]
check_untyped_defs = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-rdkit.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-.nmr_utils.*]
ignore_missing_imports = True

