[metadata]
name = nmr_to_structure
description = Code to reproduce NMR to Structure paper
author = Marvin Alberts
author_email = marvin.alberts@ibm.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = nmr_to_structure
include_package_data = True
python_requires = >= 3.7
install_requires =
    click>=8.0.4
    pandas>=1.4.2
    numpy>=1.23.0
    scipy>=1.7.3
    scikit-learn>=1.1.3
    regex>=2022.3.15
    tqdm>=4.64.0
    rdkit>=2022.9.1
    tqdm>=4.65.0
    opennmt-py>=3.0.3
    PyAutoGUI>=0.9.53
    rxn-chem-utils>=1.1.4

[options.extras_require]
dev =
    black>=23.1.0
    flake8>=6.0.0
    isort>=5.12.0
    mypy>=1.0.0
    pandas-stubs>=2.0.1.230501


[options.entry_points]
console_scripts =
    run_simulation=nmr_to_structure.nmr_generation.run_mestrenova_simulation:main
    gather_data=nmr_to_structure.nmr_generation.gather_data:main
    prepare_nmr_input=nmr_to_structure.prepare_input.prepare_nmr_input:main
    prepare_nmr_rxn_input=nmr_to_structure.prepare_input.prepare_nmr_rxn_input:main
    train_model=nmr_to_structure.training.run_training:main
    score_model=nmr_to_structure.training.score:main

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203, E501, W503, W605

[mypy]
check_untyped_defs = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-rdkit.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-.nmr_utils.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True


